--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -56,7 +56,7 @@ p {
 }
 
 .content-container {
-  padding: 160px 20px;
+  padding: 100px 20px;
 }
 
 .content h1 {
@@ -107,6 +107,15 @@ p {
 
 .logo {
   max-height: 40px;
+}
+
+.nav-link {
+  color: var(--branding-color);
+}
+
+.nav-item {
+  padding: 0 10px;
+  line-height: 14px;
 }
 
 @media (max-width: 900px) {
