--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,6 +29,10 @@ h2 {
   font-size: 64px;
 }
 
+h4 {
+  font-size: 48px;
+}
+
 p {
   font-weight: normal;
   font-size: 16px;
@@ -122,6 +126,12 @@ footer {
   margin: 60px 0;
 }
 
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
 footer .email-link {
   text-decoration: none;
   color: black;
@@ -147,6 +157,10 @@ footer .social-links a:hover {
   background: var(--branding-color);
 }
 
+footer .contact-box p {
+  margin: 0;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -155,6 +169,10 @@ footer .social-links a:hover {
 
   h2 {
     font-size: 44px;
+  }
+
+  h4 {
+    font-size: 26px;
   }
 
   .hero {
